examples/examples/todos/snapshots/todos__tests__after_create.snap
---
source: examples/examples/todos/tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 10 },
    content: [
        "            ┌Input─────────────────────┐",
        " Add a Todo │ Add a todo               │",
        "            └──────────────────────────┘",
        "┌Todos─────────────────────────────────┐",
        "│╭───╮╭───╮                            │",
        "││  ││ x │ todo 1                     │",
        "│╰───╯╰───╯                            │",
        "│                                      │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 14, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
